; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/core/extr_dc_resource.c_patch_gamut_packet_checksum.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/core/extr_dc_resource.c_patch_gamut_packet_checksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc_info_packet = type { i64*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dc_info_packet*)* @patch_gamut_packet_checksum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @patch_gamut_packet_checksum(%struct.dc_info_packet* %0) #0 {
  %2 = alloca %struct.dc_info_packet*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  store %struct.dc_info_packet* %0, %struct.dc_info_packet** %2, align 8
  %6 = load %struct.dc_info_packet*, %struct.dc_info_packet** %2, align 8
  %7 = getelementptr inbounds %struct.dc_info_packet, %struct.dc_info_packet* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %40

10:                                               ; preds = %1
  store i64 0, i64* %3, align 8
  %11 = load %struct.dc_info_packet*, %struct.dc_info_packet** %2, align 8
  %12 = getelementptr inbounds %struct.dc_info_packet, %struct.dc_info_packet* %11, i32 0, i32 0
  %13 = load i64*, i64** %12, align 8
  %14 = getelementptr inbounds i64, i64* %13, i64 3
  store i64* %14, i64** %4, align 8
  store i64 0, i64* %5, align 8
  br label %15

15:                                               ; preds = %30, %10
  %16 = load i64, i64* %5, align 8
  %17 = load %struct.dc_info_packet*, %struct.dc_info_packet** %2, align 8
  %18 = getelementptr inbounds %struct.dc_info_packet, %struct.dc_info_packet* %17, i32 0, i32 0
  %19 = load i64*, i64** %18, align 8
  %20 = getelementptr inbounds i64, i64* %19, i64 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp ule i64 %16, %21
  br i1 %22, label %23, label %33

23:                                               ; preds = %15
  %24 = load i64*, i64** %4, align 8
  %25 = load i64, i64* %5, align 8
  %26 = getelementptr inbounds i64, i64* %24, i64 %25
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* %3, align 8
  %29 = add i64 %28, %27
  store i64 %29, i64* %3, align 8
  br label %30

30:                                               ; preds = %23
  %31 = load i64, i64* %5, align 8
  %32 = add i64 %31, 1
  store i64 %32, i64* %5, align 8
  br label %15

33:                                               ; preds = %15
  %34 = load i64, i64* %3, align 8
  %35 = sub i64 256, %34
  %36 = load %struct.dc_info_packet*, %struct.dc_info_packet** %2, align 8
  %37 = getelementptr inbounds %struct.dc_info_packet, %struct.dc_info_packet* %36, i32 0, i32 0
  %38 = load i64*, i64** %37, align 8
  %39 = getelementptr inbounds i64, i64* %38, i64 2
  store i64 %35, i64* %39, align 8
  br label %40

40:                                               ; preds = %33, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
